--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-align: center;
+	background: #333333;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #dd1818, #333333);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #dd1818, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+
+h2{
+	color:white;
+	font-size: 30px;
+}
+.formularios{
+	max-width: 640px;
+	width: 93%;
+	margin: auto;
+}
+span{
+	color:white;
+	display: inline-block;
+	margin-bottom: 10px;
+	font-size: 15px;
+}
+ul{
+	padding: 0;
+	margin: 0;
+}
+.react-datepicker-wrapper{
+	display: block !important;
+}
+li{
+	margin: 0;
+	padding: 0;
+	list-style:none;
+	list-style-type: none;
+	color:white;
+	font-size: 13px;
+	text-align: left;
+	margin-bottom: 20px;
+}
+input, textarea{
+	width: 100%;
+	background-color: transparent;
+	border: 1px solid white;
+	height: 45px;
+	padding: 0 20px;
+	color :white;
+	box-sizing: border-box;
+}
+textarea{
+	height: 90px;
+}
+input:focus, textarea:focus{
+	border: 4px solid #000;
+	outline: aliceblue;
+
+}
+.form_btn{
+	padding-top: 40px;
+}
+.form_btn button{
+	height: 40px;
+	padding: 0 30px;
+	color:white;
+	font-size: 15px;
+	font-weight: bold;
+	background-color: transparent;
+	border: 1px solid white;
+	border-radius: 5px;
+	cursor: pointer;
 }
