--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,54 @@
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	text-align: center;
 	background: #333333;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #dd1818, #333333);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #dd1818, #333333); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+
+.mensaje_error{
+	background-color: #fff;
+	color:black;
+	font-size: 16px;
+	font-weight: bold;
+	text-align: center;
+	height: 40px;
+	line-height: 40px;
+	margin-bottom: 20px;
 }
 
 h2{
 	color:white;
 	font-size: 30px;
+	text-align: center;
 }
+.wrap_box{
+	text-align: left;
+	padding-left: 30px;
+	color: #fff;
 
+}
+.App{
+	padding: 40px 0px;
+}
+.wrapp_citas h2{
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	padding-bottom: 40px;
+	margin: 0;
+}
+.wrap_box >*{
+	font-size: 14px;
+	margin-bottom: 10px;
+}
 span{
 	color:white;
 	display: inline-block;
 	margin-bottom: 10px;
 	font-size: 15px;
-}
-ul{
-	padding: 0;
-	margin: 0;
 }
 .react-datepicker-wrapper{
 	display: block !important;
@@ -42,15 +60,42 @@ ul{
 	width: 93%;
 	margin: auto;
 }
+@media screen and (max-width:767px){
+	.container{
+		flex-direction: column;
+	}
+}
+
 .container > *{
 	width: 50%;
 	margin: 0;
+	padding-top: 50px;
+	padding-left: 20px;
+	padding-right: 20px;
+	box-sizing: border-box;
+}
+@media screen and (max-width:767px){
+	.container >*{
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+.list_citas{
+	display: flex;
+	flex-wrap: wrap;
+}
+.list_citas >*{
+	width: 48%;
+	padding: 40px 30px;
+	box-sizing: border-box;
+	background-color: black;
+	border-radius: 10px;
+	margin: 1%;
 }
 li{
 	margin: 0;
 	padding: 0;
-	list-style:none;
-	list-style-type: none;
 	color:white;
 	font-size: 13px;
 	text-align: left;
@@ -73,6 +118,17 @@ input:focus, textarea:focus{
 	border: 4px solid #000;
 	outline: aliceblue;
 
+}
+.btn{
+	margin-top: 30px;
+	background-color: white;
+	color: black;
+	border: none;
+	font-size: 15px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 30px;
+	font-weight: bold;
 }
 .form_btn{
 	padding-top: 40px;
